kubernetes/clusters/core/flux-system/networkpolicy.allow-webhooks.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v0.41.1
  name: allow-webhooks
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: notification-controller
  policyTypes:
    - Ingress
